syntax = "proto3";

package inn_service.service.v1;

option go_package = "github.com/POMBNK/shtrafovNetTestTask/gen/go/proto/inn_service/service/v1";

import "inn_service/model/v1/company.proto";

service CompanyService {
  rpc GetCompany(GetCompanyRequest) returns (GetCompanyResponse) {}
}

message GetCompanyRequest {
  string Inn = 1;
}

message GetCompanyResponse {
 optional inn_service.model.v1.Company company = 1;
}

